# helloworld_cicd

./: .travis.yml  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_version.cpp
test_boost/: CMakeLists.txt
test_gtest/: CMakeLists.txt  test_version_gtest.cpp
